--- a/GUI_AUGUR_V3.csproj
+++ b/GUI_AUGUR_V3.csproj
@@ -46,7 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataBase\ConexionDB1.cs" />
+    <Compile Include="Controladores\DataBase\ConexionDB1.cs" />
+    <Compile Include="ModelosClases\Usuario.cs" />
     <Compile Include="Principal.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -61,6 +62,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VistasDeMódulos\MóduloClientes\ClientePrincipal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VistasDeMódulos\MóduloClientes\ClientePrincipal.Designer.cs">
+      <DependentUpon>ClientePrincipal.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Loggin.resx">
       <DependentUpon>Loggin.cs</DependentUpon>
     </EmbeddedResource>
@@ -76,6 +83,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="VistasDeMódulos\MóduloClientes\ClientePrincipal.resx">
+      <DependentUpon>ClientePrincipal.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -89,6 +99,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="VistasDeMódulos\MóduloAdminstración\" />
+    <Folder Include="VistasDeMódulos\MóduloAyuda\" />
+    <Folder Include="VistasDeMódulos\MóduloPagos\" />
+    <Folder Include="VistasDeMódulos\MóduloPlatos\" />
+    <Folder Include="VistasDeMódulos\MóduloReportes\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
