--- a/GUI_AUGUR_V3.csproj
+++ b/GUI_AUGUR_V3.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -53,11 +54,23 @@
     <Compile Include="VistasDeMódulos\móduloAyuda\AyudaPrincipal.Designer.cs">
       <DependentUpon>AyudaPrincipal.cs</DependentUpon>
     </Compile>
-    <Compile Include="VistasDeMódulos\móduloPedidos\PedidosPrincipal.cs">
+    <Compile Include="VistasDeMódulos\móduloPedidos\ConsultaPedido.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="VistasDeMódulos\móduloPedidos\PedidosPrincipal.Designer.cs">
-      <DependentUpon>PedidosPrincipal.cs</DependentUpon>
+    <Compile Include="VistasDeMódulos\móduloPedidos\ConsultaPedido.Designer.cs">
+      <DependentUpon>ConsultaPedido.cs</DependentUpon>
+    </Compile>
+    <Compile Include="VistasDeMódulos\móduloPedidos\CreacionPedido.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VistasDeMódulos\móduloPedidos\CreacionPedido.Designer.cs">
+      <DependentUpon>CreacionPedido.cs</DependentUpon>
+    </Compile>
+    <Compile Include="VistasDeMódulos\móduloPedidos\InvalidacionPedido.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VistasDeMódulos\móduloPedidos\InvalidacionPedido.Designer.cs">
+      <DependentUpon>InvalidacionPedido.cs</DependentUpon>
     </Compile>
     <Compile Include="VistasDeMódulos\móduloPlatos\submóduloIngrediente\ActualizarIngrediente.cs">
       <SubType>Form</SubType>
@@ -83,11 +96,11 @@
     <Compile Include="VistasDeMódulos\móduloReportes\RClientesFrecuentes.Designer.cs">
       <DependentUpon>RClientesFrecuentes.cs</DependentUpon>
     </Compile>
-    <Compile Include="VistasDeMódulos\móduloReportes\ReportesPrincipal.cs">
+    <Compile Include="VistasDeMódulos\móduloReportes\ReporteMensual.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="VistasDeMódulos\móduloReportes\ReportesPrincipal.Designer.cs">
-      <DependentUpon>ReportesPrincipal.cs</DependentUpon>
+    <Compile Include="VistasDeMódulos\móduloReportes\ReporteMensual.Designer.cs">
+      <DependentUpon>ReporteMensual.cs</DependentUpon>
     </Compile>
     <Compile Include="ModelosClases\Ingrediente.cs" />
     <Compile Include="ModelosClases\Parametro.cs" />
@@ -188,8 +201,14 @@
     <EmbeddedResource Include="VistasDeMódulos\móduloClientes\ActualizarRegistrarCliente.resx">
       <DependentUpon>ActualizarRegistrarCliente.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="VistasDeMódulos\móduloPedidos\PedidosPrincipal.resx">
-      <DependentUpon>PedidosPrincipal.cs</DependentUpon>
+    <EmbeddedResource Include="VistasDeMódulos\móduloPedidos\ConsultaPedido.resx">
+      <DependentUpon>ConsultaPedido.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="VistasDeMódulos\móduloPedidos\CreacionPedido.resx">
+      <DependentUpon>CreacionPedido.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="VistasDeMódulos\móduloPedidos\InvalidacionPedido.resx">
+      <DependentUpon>InvalidacionPedido.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="VistasDeMódulos\móduloPlatos\submóduloIngrediente\ActualizarIngrediente.resx">
       <DependentUpon>ActualizarIngrediente.cs</DependentUpon>
@@ -206,8 +225,8 @@
     <EmbeddedResource Include="VistasDeMódulos\móduloReportes\RClientesFrecuentes.resx">
       <DependentUpon>RClientesFrecuentes.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="VistasDeMódulos\móduloReportes\ReportesPrincipal.resx">
-      <DependentUpon>ReportesPrincipal.cs</DependentUpon>
+    <EmbeddedResource Include="VistasDeMódulos\móduloReportes\ReporteMensual.resx">
+      <DependentUpon>ReporteMensual.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="VistasDeMódulos\móduloReportes\RPlatosMasVendidos.resx">
       <DependentUpon>RPlatosMasVendidos.cs</DependentUpon>
