--- a/GUI_AUGUR_V3.csproj
+++ b/GUI_AUGUR_V3.csproj
@@ -48,6 +48,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controladores\DataBase\ConexionDB.cs" />
+    <Compile Include="ReseteoContra.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReseteoContra.Designer.cs">
+      <DependentUpon>ReseteoContra.cs</DependentUpon>
+    </Compile>
+    <Compile Include="VistasDeMódulos\móduloAdminstración\ParamPrincipal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VistasDeMódulos\móduloAdminstración\ParamPrincipal.Designer.cs">
+      <DependentUpon>ParamPrincipal.cs</DependentUpon>
+    </Compile>
     <Compile Include="VistasDeMódulos\móduloAyuda\AyudaPrincipal.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -183,8 +195,14 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ReseteoContra.resx">
+      <DependentUpon>ReseteoContra.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="VistasDeMódulos\móduloAdminstración\AdminPrincipal.resx">
       <DependentUpon>AdminPrincipal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="VistasDeMódulos\móduloAdminstración\ParamPrincipal.resx">
+      <DependentUpon>ParamPrincipal.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="VistasDeMódulos\móduloAdminstración\RegistrarActualizarParam.resx">
       <DependentUpon>RegistrarActualizarParam.cs</DependentUpon>
